Adjust size and spacing of form elements for correct display on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,120 +436,6 @@ blockquote hr{
   margin: 0;  
 }
 
-.contactbox, .calls{
-    width: 100%;
-    padding: 2% 0%;
-    margin: 5% 0%;
-}
-
-.contactbox{
-    background: var(--lighttrans);
-    border: 1px solid var(--lighttrans);
-    border-radius: 5px;
-}
-
-.calls{
-    color: #fff;
-    background: var(--buttonblue);
-    border: 1px solid var(--buttonblue);
-    border-radius: 5px;
-}
-
-.address{
-    text-align: left;
-    padding: 3% 0%;
-    padding-left: 10%;
-    line-height: 2;
-}
-
-#name,#email,#phone,#message,#nameres,#emailres,#phoneres,#messageres{
-    width: 90%;
-    margin: 2% auto;
-    padding: 2%;
-    background-color: #fff;
-    border: 1px solid var(--light);
-    border-radius: 5px;
-}
-
-#message{
-    padding-bottom: 150px;
-}
-
-#submit,#submitres{
-    width: 90%;
-    color: #fff;
-    font-weight: 600;
-    background-color: var(--buttonblue);
-    border: 1px solid var(--buttonblue);
-    border-radius: 5px;
-    padding: 2%;
-}
-
-.res{
-    padding-left: 2%;
-    padding-bottom: 0;
-}
-
-#fiftyfifty{
-    width: 90%;
-    position: relative;
-    top: 5rem;
-    margin: 0% auto 0% auto;
-    height: 3.5rem;
-}
-
-#guests,#date{
-    position: absolute;
-    bottom: 0;
-    background-color: #fff;
-    border: 1px solid #fff;
-    border-radius: 5px; 
-    margin: 4rem 0;
-    padding: 2% 2%;
-    height: 2.2rem;
-}
-
-#guests{
-    width: 30%;
-    padding-left: 15px;
-    right: 0;
-    
-}
-
-#date{
-    width: 65%;
-    left: 0;
-}
-
-#labelguests{
-    position: absolute;
-    top: -130%;
-    right: 18%;
-}
-
-#labeldate{
-    position: absolute;
-    top: -130%;
-    left: 2%;
-}
-
-form{
-    margin: 0 auto;
-    padding: 0;
-}
-
-@media screen and (min-width: 1200px){
-    .contactpage .container-fluid{
-        width: 60%;
-    }
-}
-
-@media screen and (min-width: 768px){
-    .contactpage .container-fluid{
-        width: 80%;
-    }
-}
-
 /*------- Menu.html -------*/
 
 .menuback{
@@ -961,7 +847,9 @@ form{
 
 
 .btcustom1{
-    padding: 1% 0;
+    width: 95%;
+    margin: 0 auto;
+    padding: 5% 0;
     background-color: var(--buttonblue);
     border: 1px solid var(--buttonblue);
     border-radius: 5px;
@@ -975,6 +863,12 @@ form{
     padding: 5%;
     background-color: var(--lighttrans);
     border: 1px solid var(--lighttrans);
-    border-radius: 5px;
-    
+    border-radius: 5px; 
+}
+
+@media screen and (max-width:576px){
+.contactback h3{
+    font-size: 110%;
+
+}
 }
